got values. TODO: add '+' button to items page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="form-step form-step-active">
       <div class="input-group">
         <label for="Bag">Bag</label>
-        <input type="text" placeholder="Enter Bag Subtotal" name="bag" id="bag" onblur="getBagValue()">
+        <input type="text" placeholder="Enter Bag Subtotal" name="bag" id="bag">
       </div>
       <div class="">
         <a href="#" class="btn btn-next width-50 ml-auto">Next</a>
@@ -35,13 +35,13 @@
       </div>
       <div class="btns-group">
         <a href="#" class="btn btn-prev">Prev</a>
-        <a href="#" class="btn btn-next">Submit</a>
+        <a href="#" class="btn btn-submit">Submit</a>
       </div>
     </div>
     <div class="form-step">
       <div class="input-group">
-        <div class="tax-rate" id="tax">
-          <p>New Tax Rate is: </p>
+        <div class="tax-rate">
+          <p id="tax"></p>
         </div>
       </div>
       <div class="btns-group">
