added gradient, still need to fix button

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <div class="form-step">
       <div class="input-group">
         <label for="Taxable">Taxable Items</label>
+        <div class="plus">
         <input type="text" placeholder="Tap '+' to add Items" name="taxable" id=taxable>
+        <a href="#" class="btn btn-add">+</a>
+        </div>
       </div>
       <div class="btns-group">
         <a href="#" class="btn btn-prev">Prev</a>
