--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
   <div class="current-totals">
     <div>
       <p>Current Subtotal: <strong><span id="current-subtotal">0</span></strong></p>
-
     </div>
     <div>
       <p>Taxable item total: <strong><span id="current-taxable-total">0</span></strong></p>
-
     </div>
   </div>
     <!-- steps -->
@@ -43,9 +41,13 @@
     <div class="form-step">
       <div class="input-group">
         <label for="Taxable">Taxable Items</label>
-        <div class="plus">
-        <input type="text" placeholder="Tap '+' to add Items" name="taxable" id=taxable>
-        <a href="#" class="btn btn-add">+</a>
+        <div class="plus" id="plus">
+          <div class="plus-items" id="plus-items">
+            <input type="text" placeholder="Tap '+' to add Items" name="taxable" id="taxable">
+          </div>
+          <div>
+            <a href="#" class="btn btn-add">+</a>
+          </div>
         </div>
       </div>
       <div class="btns-group">
