updates how inputs fields are added and removed
- creates new input field rather than cloning the existing one
- removes last input field
- prevents accidental deletion of the first input

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
           <div class="plus-items" id="plus-items">
             <input type="text" placeholder="Tap '+' to add Items" name="taxable" id="taxable">
           </div>
-          <div>
+          <div class="plus-btns-group">
+            <a href="#" class="btn btn-remove">-</a>
             <a href="#" class="btn btn-add">+</a>
           </div>
         </div>
