sets taxable item total based on input fields

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Tax Free Calculator</title>
 </head>
@@ -43,7 +43,7 @@
         <label for="Taxable">Taxable Items</label>
         <div class="plus" id="plus">
           <div class="plus-items" id="plus-items">
-            <input type="text" placeholder="Tap '+' to add Items" name="taxable" id="taxable">
+            <input type="number" placeholder="Tap '+' to add Items" name="taxable" class="taxable" id="taxable1">
           </div>
           <div class="plus-btns-group">
             <a href="#" class="btn btn-remove">-</a>
