--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <input type="number" placeholder="Enter Bag Subtotal" name="bag" id="bag">
       </div>
       <div class="btns-group">
-        <input class="btn btn-reset" type="reset" value="Reset Bag">
+        <a href="#" class="btn btn-reset">Reset Bag</a>
         <a href="#" class="btn btn-next">Next</a>
       </div>
     </div>
