updates some styles

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <!-- current totals -->
   <div class="current-totals">
     <div>
-      <p>Current Subtotal: <strong><span id="current-subtotal">0</span></strong></p>
+      <p>Current Subtotal: <strong>$ <span id="current-subtotal">0</span></strong></p>
     </div>
     <div>
-      <p>Taxable item total: <strong><span id="current-taxable-total">0</span></strong></p>
+      <p>Taxable item total: <strong>$ <span id="current-taxable-total">0</span></strong></p>
     </div>
   </div>
     <!-- steps -->
